version '1.0'

apply plugin: 'java'
apply plugin: 'application'

mainClassName = "statemutest.application.TestCaseGeneration"
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile project (':knowledge')
    compile project (':xstate')
    compile project (':geofamily')
    compile group: 'log4j', name: 'log4j', version: '1.2.16'
    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
    compile 'com.google.guava:guava:25.1-jre'
    compile group: 'com.esotericsoftware.yamlbeans', name: 'yamlbeans', version: '1.13'
    compile group: 'com.github.javafaker', name: 'javafaker', version: '0.15'
    compile group: 'org.apache.commons', name: 'commons-text', 'version': '1.4'
}

task fatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'statemutest.application.TestCaseGeneration'
    }
    baseName = 'statemutest-all'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}